[workspace]
resolver = "2"
members = ["api", "program", "cli"]

[workspace.package]
version = "3.7.24"
edition = "2021"
license = "Apache-2.0"
homepage = "https://localuniverse.io"
description = "Multiplayer presence embedded anywhere on the internet."
documentation = "https://docs.rs/localuniverse-api/latest/localuniverse_api/"
repository = "https://github.com/tin0d0/local-universe"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
const-crypto = "0.1.0"
entropy-api = "0.1.4"
entropy-types = "0.0.1"
num_enum = "0.7.2"
solana-client = "^2.1"
localuniverse-api = { path = "./api" }
solana-security-txt = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "=2.1.0"
solana-address-lookup-table-interface = { version = "=0.0.2", features = ["bincode"] }
solana-nostd-keccak = "0.1.3"
solana-program = "=2.1.0"
solana-sdk = "=2.1.0"
spl-pod = "=0.5.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-token-2022 = "^7"
spl-token-metadata-interface = "^0.6"
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] } 
steel = { features = ["spl"], version = "4.0.4" }
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true

[patch.crates-io]
async-lock = { git = "https://github.com/smol-rs/async-lock", rev = "v3.3.0" }
